Update config with repo name

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Singapore Polytechnic Self Help Centre
 remote_theme: opendocsg/opendoc-theme@v2
 timezone: Asia/Singapore
-repository: opendocsg/opendoc-template #----> Required
+repository: opendocsg/opendoc-sp-self-help-centre
 plugins:
   - jekyll-include-cache
 baseurl: ''
