--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Singapore Polytechnic Self Help Centre
-remote_theme: opendocsg/opendoc-theme@v2
+remote_theme: opendocsg/opendoc-theme@master
 timezone: Asia/Singapore
 repository: opendocsg/opendoc-sp-self-help-centre
 plugins:
@@ -12,12 +12,21 @@ google_analytics:  #----> Optional, Google analytics ID
 fast_build: false
 offline: false
 preload_pages: true
-order: 
-  - 'index.md'
-  - 'faq.md'
 
 styling_options:
   primary_brand_color: '#444'  #----> Optional, theme color
   logo_path: /assets/logo.png  #----> Optional, path to logo
   opendoc_logo_path: /assets/images/logo-full.png
   feedback_url: https://form.gov.sg/5cee3d46138e3200109244df #----> Optional, feedback url
+
+hide_toolbar:
+  sidebar: false
+  pdf: false
+  github: true
+
+folders:
+  - name: '/'
+    title: 'Singapore Polytechnic Self Help Centre'
+    subtitle: ''
+    order:
+    - 'faq.md'
