--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ preload_pages: true
 
 styling_options:
   primary_brand_color: '#000080'  #----> Optional, theme color
-  logo_path: /assets/logo.png  #----> Optional, path to logo
+  logo_path: /assets/sp3.jpg  #----> Optional, path to logo
   opendoc_logo_path: /assets/images/logo-full.png
   feedback_url: https://form.gov.sg/5cee3d46138e3200109244df #----> Optional, feedback url
 
