--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Singapore Polytechnic Self Help Centre
+title: PACE Academy Self Help Centre
 remote_theme: opendocsg/opendoc-theme@master
 timezone: Asia/Singapore
 repository: opendocsg/opendoc-sp-self-help-centre
