--- a/_config.yml
+++ b/_config.yml
@@ -28,5 +28,5 @@ folders:
   - name: '/'
     title: 'PACE Academy Self Help Centre'
     subtitle: ''
-document_order:
-- QuickArticles
+    order:
+      - QuickArticles
