--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,16 @@
 title: PACE Academy Self Help Centre
-remote_theme: opendocsg/opendoc-theme@master
-timezone: Asia/Singapore
-repository: opendocsg/opendoc-sp-self-help-centre
+remote_theme: opendocsg/opendoc-theme@v2
+repository: opendocsg/opendoc-supreme-court-judgments
 plugins:
   - jekyll-include-cache
 baseurl: ''
-server_PROD: https://search.opendoc.sg
-server_DEV: https://search-staging.opendoc.sg
-google_analytics:  #----> Optional, Google analytics ID
-
-fast_build: false
-offline: false
-preload_pages: true
-
+server_PROD: 'https://search.opendoc.sg'
+server_DEV: 'https://search-staging.opendoc.sg'
+fast_build: true
+offline_search_only: false
 styling_options:
-  primary_brand_color: '#000080'  #----> Optional, theme color
-  logo_path: /assets/sp3.jpg  #----> Optional, path to logo
+  primary_brand_color: '#000080'
+  logo_path: /assets/sp3.jpg
   opendoc_logo_path: /assets/sp3.jpg
-  feedback_url: https://form.gov.sg/5cee3d46138e3200109244df #----> Optional, feedback url
-
-hide_toolbar:
-  sidebar: false
-  pdf: false
-  github: true
-
-folders:
-  - name: '/'
-    title: 'PACE Academy Self Help Centre'
-    subtitle: ''
-    order:
-      - 'QuickArticles'
+document_order:
+  - QuickArticles
