--- a/_config.yml
+++ b/_config.yml
@@ -13,4 +13,5 @@ styling_options:
   logo_path: /assets/sp3.jpg
   opendoc_logo_path: /assets/sp3.jpg
 document_order:
+  - QuickArticles
   - Technical
