--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ styling_options:
   primary_brand_color: '#000080'
   logo_path: /assets/sp3.jpg
   opendoc_logo_path: /assets/sp3.jpg
+  feedback_url: https://form.gov.sg/5e744fb8b74872001193fe6a #----> Optional, feedback url
 document_order:
   - QuickArticles
   - Technical
