--- a/_config.yml
+++ b/_config.yml
@@ -20,5 +20,4 @@ styling_options:
   opendoc_logo_path: /assets/sp3.jpg
   feedback_url: https://form.gov.sg/5e744fb8b74872001193fe6a #----> Optional, feedback url
 document_order:
-  - Announcements.md
-  - OSC.md
+  - GenInfo
