--- a/GenInfo/_config.yml
+++ b/GenInfo/_config.yml
@@ -1,3 +1,6 @@
+title: UKM v Attorney-General
+subtitle: "[2018] SGHCF 18 / Decision Date: 17\_December\_2018"
+
 By order:
   - Announcements.md
   - OSC.md
