--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: PACE Academy Self Help Centre
-remote_theme: opendocsg/opendoc-theme@master
+remote_theme: opendocsg/opendoc-theme@v2
 timezone: Asia/Singapore
 repository: opendocsg/opendoc-sp-self-help-centre
 plugins:
@@ -9,9 +9,9 @@ server_PROD: 'https://search.opendoc.sg'
 server_DEV: 'https://search-staging.opendoc.sg'
 google_analytics:  #----> Optional, Google analytics ID
 
-fast_build: false
+fast_build: true 
 offline: false
-preload_pages: true
+preload_pages: true 
 
 offline_search_only: false
 styling_options:
